# ergostar

./: .env.example  .env.example.docker  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  db.drawio  docker-compose.override.yml  docker-compose.yml  entrypoint  gunicorn_landing.py  playground.ipynb  pyproject.toml  test.py
admin/: __init__.py
admin/config/: __init__.py  asgi.py  db_router.py  settings.py  unfold.py  urls.py  wsgi.py
admin/core/: __init__.py  admin.py  apps.py  enums.py  models.py
admin/core/admins/: __init__.py
admin/core/migrations/: 0001_initial.py
app/: __init__.py  builder.py  landing.py  multy.py  unfold.py
app/exception_handlers/: base.py  landing.py
apps/: builder.py  landing.py
cli/: init.py  init_project.py
common/unfold/: __init__.py
compose/postgres/: Dockerfile  init.sql
config/: __init__.py  constants.py  models.py  plugins.py  settings.py
config/di/: __init__.py
config/plugins/: __init__.py  builder.py  configs.py  plugins.py
config/postgres/migrations/: env.py
config/postgres/models/: landing.py  subscriptions.py
db/fixtures/: subscription_plans.json
db/migrations/: alembic.ini  env.py
db/migrations/versions/: 2024-06-15__086f710cd54a.py  2024-06-16_12-38__89d6fc111815.py  2024-06-23_06-36__a3b331f85073.py  2024-06-23_06-46__6556348b4262.py  2024-06-23_06-48__38d80711fa23.py  2024-06-23_06-51__0863144d563d.py  2024-06-23_17-17__8b7e9c4d5449.py  2024-06-23_17-26__ce11da60f13e.py  2024-06-24_07-38__48fec3ec3c18.py
db/models/: __init__.py  landing.py  subscriptions.py
server/: builder.py  injector.py  plugins.py  provider.py  router.py
src/application/: ioc.py
src/application/common/: dto.py  fixture_loader.py
src/application/services/: landing_home_page.py  landing_settings.py  landing_snippet.py  landing_solution.py  subscription_plan.py
src/apps/: api.py  builder.py  dashboard.py  landing.py  shared.py
src/apps/exception_handlers/: __init__.py  base.py  cache.py  dashboard.py  landing.py  repository_alchemy.py  repository_vault.py  vault.py
src/cli/: commands.py
src/common/: ioc.py  types.py
src/common/base/: alchemy.py  basealchemyrepository.py  dto.py  entity.py  fixture_loader.py  gateway.py  interactor.py  mapper.py  repository.py  repository_alchemy.py  repository_generic.py  service.py  use_case.py  value_object.py  vault_uow.py
src/common/interfaces/: database_session.py  db.py  fixture_loader.py  fixture_loader_repository.py  mapper.py  repository.py
src/config/: __init__.py  alchemy.py  cache.py  cli.py  container.py  cors.py  csrf.py  ioc.py  litestar.py  logging.py  plugins.py  redis.py  settings.py  vault.py
src/config/logging_handlers/: telegram.py
src/config/security/: api_key.py  auth_api_key.py  middleware_api_key.py  test.py
src/config/utils/: uuid.py
src/core/: controller.py  routing.py
src/db/migrations/: alembic.ini  env.py
src/db/models/: __init__.py  landing.py
src/di/: landing.py  postgres.py
src/domain/common/: entity.py  types.py
src/domain/enums/: database.py  landing.py
src/features/auth/: __init__.py  controllers.py  ioc.py  models.py  routing.py
src/features/core/: __init__.py  enums.py  ioc.py  routing.py
src/features/landing/: __init__.py  ioc.py  routing.py  tables.py
src/features/subscriptions/: __init__.py  gateways.py  ioc.py  models.py  routing.py  tables.py
src/features/users/: __init__.py  entities.py  gateways.py  ioc.py  models.py  tables.py
src/infra/: __init__.py  settings.py
src/infra/di/: __init__.py  landing.py  postgres.py  subscriptions.py
src/infra/litestar/: __init__.py  app_api.py  app_dashboard.py  app_landing.py  builder.py
src/infra/plugins/: builder.py  configs.py  plugins.py
src/infra/unfold/: __init__.py  app.py
src/infrastructure/: ioc.py
src/infrastructure/common/: interfaces.py
src/infrastructure/database/: base.py  engine.py
src/infrastructure/plugins/: builder.py  plugins.py
src/infrastructure/postgres/: __init__.py
src/infrastructure/redis/: engine.py
src/infrastructure/unfold/: __init__.py  models.py
src/infrastructure/vault/: __init__.py  base.py  engine.py  interfaces.py
src/landing/: controller.py  dependencies.py  enums.py  provider.py
src/landing/domain/: __init__.py  home_page.py
src/landing/interactors/: get_home_page_context.py
src/landing/presentations/: __init__.py  favicon.py  main.py  seo.py
src/landing/repositories/: __init__.py  home_page.py  landing_home_page.py  landing_settings.py  landing_snippet.py  landing_solution.py  settings.py  snippet.py  solution.py
src/landing/services/: __init__.py  home_page.py  landing_home_page.py  landing_settings.py  landing_snippet.py  landing_solution.py  subscription_plan.py
src/main/: admin.py  api.py  dashboard.py
src/main/config/: alchemy.py  cli.py  compression.py  container.py  cors.py  csrf.py  logging.py  settings.py
src/main/exception_handlers/: cache.py  dashboard.py  repository_alchemy.py  repository_vault.py  server.py
src/presentation/: routing.py
src/presentation/cli/: __init__.py
src/presentation/dtos/: api_keys.py
src/presentation/landing/: __init__.py  favicon.py  main.py
src/presentation/sql_admin/: __init__.py  landing.py
src/presentation/unfold/: abstracts.py
src/sql_admin/: __init__.py  landing.py
src/subscriptions/: __init__.py  probider.py  provider.py
src/subscriptions/domain/: __init__.py
src/subscriptions/repositories/: __init__.py  plan.py  subscription_plan.py
src/subscriptions/services/: subscription_plan.py
static/landing/css/: custom.css  dashcore.41588051c3b03e83ed26.css
static/landing/js/: dashcore.95cbb7260081cb946756.js  loading.b6bb5062cb3673f443b3.js
templates/admin/: dashboard.html
templates/landing/components/: all_your_needs.html  best_of_us.html  (+16 more)
tests/: test_solution.py
tests/src/: provider.py  repositories.py  services.py
tests/unit/: test_landing_snippet__list_active.py
unfold/: manage.py
unfold/config/: asgi.py  settings.py  urls.py  wsgi.py
unfold/core/: admin.py  apps.py  enums.py  models.py
(+199 files in other folders)
